@@ -22,6 +22,7 @@ Date: ???
     - Renamed Bob's Assembling machines mod setting Multi purpose furnaces to Recipe furnaces
     - Reduced cost of basic Steel plate smelting from 8 Glowing hot iron plate to 6 Glowing hot iron plate on normal difficulty
     - Increased starting landfill from 1k to 2k
+    - Updated crystallization recipe icons
   Bugfixes:
     - Fixed crash when Train Construction Site is enabled
     - Fixed Forage for cellulose fiber recipe not usable with mods that replace the default character
